data/all_generated_tests/raw_wast_tests/call_indirect_InvalidorInconsistentControlFlowGraph_4388.wast
;; 7. **Test 7: Loop with Indirect Call Modifying Table Index**:    - **Description**: Implement a loop where each iteration uses `call_indirect` and modifies the table index operand.    - **Constraint Checked**: Checks loop structure and correct updating of table index within iterative indirect calls.    - **CFG Relation**: Assesses CFG's accuracy in reflecting loop iterations and the dynamic nature of index modifications.

(assert_invalid
  (module
    (type $sig (func (param i32)))
    (func $f (param i32))
    (table funcref (elem $f))
    (func $loop-indirect-call
      (local $index i32)
      (local.set $index (i32.const 0))
      (loop
        (call_indirect (type $sig) (local.get $index))
        (local.set $index (i32.add (local.get $index) (i32.const 1)))
        (br_if 0 (i32.lt_s (local.get $index) (i32.const 10)))
      )
    )
  )
  "type mismatch"
)